Fix bug for background overlay not showing up when login modal appears.

--- a/headphones.css
+++ b/headphones.css
@@ -458,6 +458,12 @@ main {
     margin-top: 1.5em;
 }
 
+#no-reviews {
+    color: black;
+    padding: 3em;
+    text-align: center;
+}
+
 .star-point {
     color: orange;
 }
